# coreutils

./: main.py
ASTvisitor/: .gitignore  CFG-printer.cpp  CMakeLists.txt  main.cpp  plot-generator.py  unifier.py
ASTvisitor/scripts/: first-pass.yaml  gatherer.sh  out.txt  out.yaml
ASTvisitor/stats/: .gitignore  plot-generator.py
ASTvisitor/stats/tex/: main.tex  makefile  numbers.tex  table.tex
